Add api description to healthcheck
